--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -26,8 +26,8 @@ $aColor:					#21BAFF;
 $aHover:					lighten($aColor,10);
 
 // 表單focus顏色
-$form-focus:				#21BAFF;				 //表單
-$form-btn:					#21BAFF;				//表單
+$form-focus:				#c00009;				 //表單
+$form-btn:					#c00009;				//表單
 //-------------------------------------------------------------字型--------//
 
 // 字型設定
