--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -43,12 +43,22 @@ body {
 }
 ////////////////////////////////////////////////////////////
 // 為了與首頁區隔，請在內頁加上innerpage ClassName
-// .innerpage {
-//     padding-top: 2em;
-//     @include screen('mobile') {
-//         padding-top: 5em;
-//     }
-//     >.container {
-//         @include gutter(); //gutter 代表左右要留白
-//     }
-// }
+.innerpage {
+    padding-top: 2em;
+    @include screen('mobile') {
+        padding-top: 5em;
+    }
+    >.container {
+        @include gutter(); //gutter 代表左右要留白
+        
+        position: relative;
+        .function{
+            position: absolute;
+            right: 0;
+            top: 32px;
+        }
+        @include screen('mobile') {
+            .function{ position: static; }
+        }
+    }
+}
