--- a/sass/sass/_thumbnail.scss
+++ b/sass/sass/_thumbnail.scss
@@ -1,5 +1,6 @@
 .thumbnail {
-    box-shadow: 0 0 3em -1em rgba(0, 0, 0, 0.5);
+    // box-shadow: 0 0 3em -1em rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 .5em 0 rgba(0,0,0,0.1);
     background: #FFF;
     a {
         display: block;
