2020/01/07 調整 1、search 需求時間 input 2、最新消息titel寬度 3、課程欄位數 4、內頁標題過長，function位置調整

--- a/sass/page/_mp.scss
+++ b/sass/page/_mp.scss
@@ -172,6 +172,8 @@
             margin-right: .08em;
             label{ display: block; }
             select{ width: 100%; }
+
+            input[type="text"]{ width: 100%; }
         }
     }
 
@@ -297,7 +299,7 @@
     h3{
         font-size: 0;
         background: url(../images/basic/title-news.png) no-repeat;
-        width: 142px;
+        width: 150px;
         height: 85px;
     }
     ul{
