--- a/sass/page/_cp.scss
+++ b/sass/page/_cp.scss
@@ -3,7 +3,15 @@
 h1.title, h2.title {
     line-height: 1.25em;
     margin: .4em 0;
+
+    width: calc(100% - 264px);
+    // border-right: dotted 1px #9e9e9e;
+
+    @include screen('tablet') {
+        width: 100%;
+    }
 }
+
 .cp {
     .pic {
         float: left;
@@ -397,7 +405,7 @@ div.tag {
     list-style: none;
     margin: 0 0 .7em 0;
     border-left: solid 5px $primaryColor;
-    padding: 0.8em 1.5em 0.8em;
+    padding: 0.8em 1.5em .4em;
     background: #F2F2F2;
     @extend %clearfix;
      @include box-sizing;
