--- a/sass/page/_mp.scss
+++ b/sass/page/_mp.scss
@@ -132,7 +132,7 @@
     }
 
     h3{
-        font-size: 0;;
+        font-size: 0;
         background: url('../images/basic/title-search.png') no-repeat;
         width: 260px;
         height: 60px;
