補傳2020/1/9圖片壓縮更新

--- a/sass/page/_mp.scss
+++ b/sass/page/_mp.scss
@@ -215,7 +215,7 @@
 
 // 共用背景 service、news
 .cross-bg{
-    background: url(../images/basic/bg-cross-bg.gif) right bottom no-repeat, $color-gray;
+    background: url(../images/basic/bg-cross-bg.jpg) right bottom no-repeat, $color-gray;
 }
 
 // 預約通譯服務
